// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete-log-viewer-saved-search-by-name should delete a saved search by name 1`] = `
{
  "content": [
    {
      "text": "{"success":true}",
      "type": "text",
    },
  ],
}
`;

exports[`delete-log-viewer-saved-search-by-name should handle empty name parameter 1`] = `
{
  "content": [
    {
      "text": "Error: AxiosError: Request failed with status code 404",
      "type": "text",
    },
  ],
}
`;

exports[`delete-log-viewer-saved-search-by-name should handle non-existent saved search 1`] = `
{
  "content": [
    {
      "text": "Error: AxiosError: Request failed with status code 404",
      "type": "text",
    },
  ],
}
`;
